# bead-analyzer

./: .gitignore  .mailmap  BUILD.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build_exe.spec  install_check.py  pyproject.toml  run_gui.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: post-release-checklist.md
.github/workflows/: test.yml
bead_analyzer/: __init__.py  analysis.py  cli.py  core.py  detectors.py  gui.py
docs/: CLI.md  GUI.md  RECOMMENDATION_500nm_5x014NA.md
examples/: example_commands.txt
scripts/: annotate_beads.py  make_bead_image.py  train_cellpose.py  verify_env.py
tests/: __init__.py  test_core.py
