[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bead-analyzer"
version = "1.0.0"
description = "Analyze images of microspheres for characterizing light microscopy systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Bead Analyzer Contributors"}]
keywords = ["microscopy", "FWHM", "resolution", "PSF", "beads"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "tifffile>=2022.2",
    "pandas>=1.3",
    "imagecodecs>=2022.1",
    "psutil>=5.8",
    "customtkinter>=5.2",
]

[project.optional-dependencies]
stardist = ["stardist>=0.9.2", "csbdeep>=0.7.4"]
cellpose = ["cellpose>=4.0.8", "torch", "torchvision", "scikit-image>=0.20"]
dev = ["pytest>=7.0"]

[project.scripts]
bead-analyzer = "bead_analyzer.cli:main"
bead-analyzer-gui = "bead_analyzer.gui:main"

[project.urls]
Repository = "https://github.com/natearnas/bead-analyzer"
Documentation = "https://github.com/natearnas/bead-analyzer#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["bead_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
